--- a/find_my_doctor.html
+++ b/find_my_doctor.html
@@ -3,15 +3,86 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <title>Find My Doctor</title>
   <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0;
-      padding: 20px;
-      background-color: #f4f4f9;
-      color: #333;
-    }
+   nav {
+            font-family: 'Segoe UI', system-ui, sans-serif;
+        }
+
+        nav ul {
+            display: flex;
+            justify-content: center;
+            gap: 2rem;
+            list-style: none;
+        }
+
+        nav a {
+            color: white;
+            text-decoration: none;
+            font-weight: 500;
+            padding: 0.5rem 1rem;
+            border-radius: 2rem;
+            transition: all 0.3s ease;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            margin-bottom: 1rem;
+        }
+
+        nav a:hover {
+            background: rgba(124, 77, 255, 0.1);
+            color: #7C4DFF;
+            transform: translateY(-2px);
+        }
+
+        nav a i {
+            margin-right: 0.5rem;
+        }
+
+        @media (max-width: 768px) {
+            nav ul {
+                flex-wrap: wrap;
+                gap: 1rem;
+            }
+        }
+
+        .logo-container {
+            display: flex;
+            justify-content: center;
+            padding: 0rem;
+        }
+
+        .logo {
+            width: 180px;
+            transition: transform 0.3s ease;
+        }
+
+        .logo:hover {
+            transform: rotate(-5deg) scale(1.05);
+        }
+
+        header {
+            position: relative;
+            text-align: center;
+            padding: 5px 0;
+            background-color: #00286e;
+            margin-bottom: 2rem;
+        }
+
+     * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
+        }
+
+        body {
+            background: linear-gradient(135deg, #F3E8FF 0%, #FCE7F3 100%);
+            color: var(--text-dark);
+            min-height: 100vh;
+            line-height: 1.6;
+        }
     h1 {
       text-align: center;
       color: #2c3e50;
@@ -72,6 +143,24 @@
   </style>
 </head>
 <body>
+<header>
+        <div class="logo-container">
+            <img src="SheCareLogo1.jpg" alt="SheCare" class="logo">
+        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html"><i class="fas fa-home"></i>Home</a></li>
+                <li><a href="https://shecare.onrender.com/" target="_blank" rel="noopener noreferrer"><i class="fas fa-capsules"></i>PillPickr</a></li>
+                <li><a href="faq.html"><i class="fas fa-question-circle"></i>FAQ</a></li>
+                <li><a href="methods.html"><i class="fas fa-heartbeat"></i>Contraceptives</a></li>
+                <li><a href="oc.html"><i class="fas fa-calendar-alt"></i>Track Cycle</a></li>
+                <li><a href="find_my_doctor.html"><i class="fas fa-calendar-alt"></i>DocFinder</a></li>
+                <li><a href="find_my_pharmacy.html"><i class="fas fa-calendar-alt"></i>FindPharm</a></li>
+                <li><a href="bot.html"><i class="fas fa-comments"></i>HerBot</a></li>
+                <li><a href="https://santos21978.softr.app/" target="_blank"><i class="fas fa-users"></i>Forum</a></li>
+            </ul>
+        </nav>
+    </header>
   <h1>Find My Doctor</h1>
   <div id="map"></div>
   <div id="list"></div>
