--- a/profile.html
+++ b/profile.html
@@ -25,7 +25,7 @@
       background: #fff;
       padding: 20px 30px;
       border-radius: 10px;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     }
     .profile-header {
       display: flex;
@@ -150,6 +150,9 @@
         document.getElementById('profileName').textContent = user.displayName || "Your Name";
         document.getElementById('profilePhoto').src = user.photoURL || "default_profile.png";
         
+        // Debug log the user ID
+        console.log("Logged in user UID:", user.uid);
+        
         // Fetch questions asked by this user.
         fetchUserQuestions(user.uid);
         // Fetch appointments for the user.
@@ -195,14 +198,24 @@
         const appointments = [];
         appointmentsSnapshot.forEach(doc => {
           const data = doc.data();
-          // Combine date and time into a single Date object.
-          // Ensure the date is in YYYY-MM-DD format and time in HH:MM (24-hour) format.
-          const appointmentDateTime = new Date(`${data.date}T${data.time}`);
-          appointments.push({
-            title: data.service,
-            start: appointmentDateTime
-          });
+          console.log("Appointment document:", data); // Debug log each appointment
+          // Validate date and time fields
+          if (data.date && data.time) {
+            // Combine date and time into a single Date object.
+            const appointmentDateTime = new Date(`${data.date}T${data.time}`);
+            if (!isNaN(appointmentDateTime)) {
+              appointments.push({
+                title: data.service || "Appointment",
+                start: appointmentDateTime
+              });
+            } else {
+              console.warn("Invalid date/time for appointment:", data);
+            }
+          } else {
+            console.warn("Missing date or time in appointment:", data);
+          }
         });
+        console.log("Appointments fetched:", appointments);
         // Initialize the calendar with the fetched appointments.
         initializeCalendar(appointments);
       } catch (error) {
@@ -216,8 +229,8 @@
         console.error("FullCalendar is not loaded.");
         return;
       }
-      var calendarEl = document.getElementById('calendar');
-      var calendar = new FullCalendar.Calendar(calendarEl, {
+      const calendarEl = document.getElementById('calendar');
+      const calendar = new FullCalendar.Calendar(calendarEl, {
         initialView: 'dayGridMonth',
         headerToolbar: {
           left: 'prev,next today',
